# GNN-project

./: .gitignore  README.md
experiments/3clique/: .gitignore  3clique.ipynb  3clique_infinite_merge.ipynb  3clique_merge.ipynb  GCNConv.py  graph.py  model_tester.py  pyproject.toml
experiments/3clique/.ipynb_checkpoints/: 3clique-checkpoint.ipynb
paper/: .gitignore  definitions.tex  introduction.tex  main.bib  main.tex  references.bib  report_titlepage.tex  titlepage.tex  work_schedule.tex
paper/experiments_results/: 3clique.tex
presentation/: .gitignore  presentation.tex  references.bib  results.tex  subject_area.tex
presentation/HSE-theme/: beamerthemeHSE.sty
